git colab setup

--- a/git_colab_setup.ipynb
+++ b/git_colab_setup.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1JgC2joB4XN3GoJBcRlV5jFc7dXuxPf60",
-      "authorship_tag": "ABX9TyMcdDpHzwTeVF+dZgimuis3"
+      "authorship_tag": "ABX9TyP9T80zWO+pHCaCN/Z8jMj0"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "zMYbeLNnvNtD"
       },
@@ -37,9 +37,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hf-K954RvjWn",
-        "outputId": "7e8a1065-9f88-4249-9c4c-9609c91ff6f7"
+        "outputId": "91ca0ec7-1c31-4555-98c3-e1ed53aa3c22"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -60,9 +60,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NHqtd8c4v9iC",
-        "outputId": "2e35ae64-9aa9-4063-fbe6-6c280e708dae"
+        "outputId": "c32ef28a-f4d0-47d3-a21f-cace2e035a80"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,9 +83,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gklwA797wDFd",
-        "outputId": "06c5ebfd-0fd9-4826-a446-97622362623d"
+        "outputId": "2d161927-18b1-4b15-eff1-45bf75e5f043"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/Dcwind/stock-market-analysis"
+        "# !git clone https://github.com/Dcwind/stock-market-analysis"
       ],
       "metadata": {
         "colab": {
@@ -134,15 +134,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "swQEdd-NxfWN",
-        "outputId": "02f75392-2f0e-4152-cab4-e5b3537dff92"
+        "outputId": "5a6e365f-2886-4ef0-822e-05051ecf5170"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "README.md\n"
+            "\u001b[0m\u001b[01;34mstock-market-analysis\u001b[0m/\n"
           ]
         }
       ]
@@ -150,8 +150,31 @@
     {
       "cell_type": "code",
       "source": [
-        "!git config --global user.name \"Daniel Ekwuazi\"\n",
-        "!git config --global user.email \"danielekwuazi@gmail.com\""
+        "%cd stock-market-analysis"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2hqP1pO4Q4N0",
+        "outputId": "ffa45072-b426-46cb-a97b-203a0171a1ce"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/Github/stock-market-analysis\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !git config --global user.name \"Daniel Ekwuazi\"\n",
+        "# !git config --global user.email \"danielekwuazi@gmail.com\""
       ],
       "metadata": {
         "id": "hpBAXc3D1O6u"
@@ -162,13 +185,13 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import userdata\n",
-        "token = userdata.get('token')\n",
+        "# from google.colab import userdata\n",
+        "# token = userdata.get('token')\n",
         "\n",
-        "user=\"Dcwind\"\n",
-        "repo=\"stock-market-analysis\"\n",
+        "# user=\"Dcwind\"\n",
+        "# repo=\"stock-market-analysis\"\n",
         "\n",
-        "!git remote set-url origin f'https://{token}@github.com/{user}/{repo}.git'"
+        "# !git remote set-url origin f'https://{token}@github.com/{user}/{repo}.git'"
       ],
       "metadata": {
         "id": "afiFRtoA4G8Y"
@@ -179,26 +202,26 @@
     {
       "cell_type": "code",
       "source": [
-        "import os, subprocess\n",
+        "# import os, subprocess\n",
         "\n",
-        "# 1. Get the token saved in Colab Secrets (or prompt manually)\n",
-        "token = userdata.get('token')          # make sure this returns the 40-char PAT\n",
-        "# token = input(\"Paste PAT: \")         # <-- fallback if userdata is empty\n",
+        "# # 1. Get the token saved in Colab Secrets (or prompt manually)\n",
+        "# token = userdata.get('token')          # make sure this returns the 40-char PAT\n",
+        "# # token = input(\"Paste PAT: \")         # <-- fallback if userdata is empty\n",
         "\n",
-        "user  = \"Dcwind\"\n",
-        "repo  = \"stock-market-analysis\"\n",
+        "# user  = \"Dcwind\"\n",
+        "# repo  = \"stock-market-analysis\"\n",
         "\n",
-        "# 2. Build the remote URL in Python\n",
-        "remote_url = f\"https://{token}@github.com/{user}/{repo}.git\"\n",
+        "# # 2. Build the remote URL in Python\n",
+        "# remote_url = f\"https://{token}@github.com/{user}/{repo}.git\"\n",
         "\n",
-        "# 3. Tell Git to use it\n",
-        "subprocess.run([\"git\", \"remote\", \"set-url\", \"origin\", remote_url], check=True)\n",
+        "# # 3. Tell Git to use it\n",
+        "# subprocess.run([\"git\", \"remote\", \"set-url\", \"origin\", remote_url], check=True)\n",
         "\n",
-        "# 4. Verify\n",
-        "subprocess.run([\"git\", \"remote\", \"-v\"], check=True)\n",
+        "# # 4. Verify\n",
+        "# subprocess.run([\"git\", \"remote\", \"-v\"], check=True)\n",
         "\n",
-        "# 5. Push\n",
-        "subprocess.run([\"git\", \"push\", \"origin\", \"main\"], check=True)   # change branch name if needed\n"
+        "# # 5. Push\n",
+        "# subprocess.run([\"git\", \"push\", \"origin\", \"main\"], check=True)   # change branch name if needed\n"
       ],
       "metadata": {
         "colab": {
@@ -247,6 +270,29 @@
     {
       "cell_type": "code",
       "source": [
+        "%ls"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QD-azd1hRDPu",
+        "outputId": "8b7661f1-2e46-4fcf-d7d8-29a3201828c2"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "git_colab_setup.ipynb  README.md\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!git status"
       ],
       "metadata": {
@@ -254,9 +300,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x2FYNFjhxlxJ",
-        "outputId": "0900478c-389d-4558-9fe4-f8b2b9a6b512"
+        "outputId": "a5f0797b-b5e9-4297-cb70-972717748a26"
       },
-      "execution_count": 33,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,12 +311,11 @@
             "On branch main\n",
             "Your branch is up to date with 'origin/main'.\n",
             "\n",
-            "Changes not staged for commit:\n",
-            "  (use \"git add <file>...\" to update what will be committed)\n",
-            "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-            "\t\u001b[31mmodified:   S&P500_analysis.ipynb\u001b[m\n",
+            "Untracked files:\n",
+            "  (use \"git add <file>...\" to include in what will be committed)\n",
+            "\t\u001b[31mha1_Amazon.csv\u001b[m\n",
             "\n",
-            "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+            "nothing added to commit but untracked files present (use \"git add\" to track)\n"
           ]
         }
       ]
@@ -278,34 +323,112 @@
     {
       "cell_type": "code",
       "source": [
-        "!git add 'S&P500_analysis.ipynb'"
+        "!git add 'ha1_Amazon.csv'"
       ],
       "metadata": {
         "id": "BSXG-8zk0I-S"
       },
-      "execution_count": 34,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!git commit -m \"Add initial S&P500 analysis notebook\""
+        "!git commit -m \"Added Amazon ESP data\""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MhRaIQ6_0nqE",
-        "outputId": "028444e1-3e37-46ed-a41e-803b04bb476a"
+        "outputId": "6e984156-75f6-4ad3-f3db-5eba13280fc7"
       },
-      "execution_count": 35,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[main f983777] Add initial S&P500 analysis notebook\n",
-            " 1 file changed, 1 insertion(+)\n"
+            "Author identity unknown\n",
+            "\n",
+            "*** Please tell me who you are.\n",
+            "\n",
+            "Run\n",
+            "\n",
+            "  git config --global user.email \"you@example.com\"\n",
+            "  git config --global user.name \"Your Name\"\n",
+            "\n",
+            "to set your account's default identity.\n",
+            "Omit --global to set the identity only in this repository.\n",
+            "\n",
+            "fatal: unable to auto-detect email address (got 'root@1d89237f26e0.(none)')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git pull"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XS74PTZoReDa",
+        "outputId": "f0052ea4-b604-405c-b23a-edefd0cc8eea"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "remote: Enumerating objects: 10, done.\u001b[K\n",
+            "remote: Counting objects:  10% (1/10)\u001b[K\rremote: Counting objects:  20% (2/10)\u001b[K\rremote: Counting objects:  30% (3/10)\u001b[K\rremote: Counting objects:  40% (4/10)\u001b[K\rremote: Counting objects:  50% (5/10)\u001b[K\rremote: Counting objects:  60% (6/10)\u001b[K\rremote: Counting objects:  70% (7/10)\u001b[K\rremote: Counting objects:  80% (8/10)\u001b[K\rremote: Counting objects:  90% (9/10)\u001b[K\rremote: Counting objects: 100% (10/10)\u001b[K\rremote: Counting objects: 100% (10/10), done.\u001b[K\n",
+            "remote: Compressing objects:  11% (1/9)\u001b[K\rremote: Compressing objects:  22% (2/9)\u001b[K\rremote: Compressing objects:  33% (3/9)\u001b[K\rremote: Compressing objects:  44% (4/9)\u001b[K\rremote: Compressing objects:  55% (5/9)\u001b[K\rremote: Compressing objects:  66% (6/9)\u001b[K\rremote: Compressing objects:  77% (7/9)\u001b[K\rremote: Compressing objects:  88% (8/9)\u001b[K\rremote: Compressing objects: 100% (9/9)\u001b[K\rremote: Compressing objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Total 9 (delta 4), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Unpacking objects: 100% (9/9), 91.01 KiB | 487.00 KiB/s, done.\n",
+            "From https://github.com/Dcwind/stock-market-analysis\n",
+            "   70e366f..c19fde1  main       -> origin/main\n",
+            "Updating 70e366f..c19fde1\n",
+            "Fast-forward\n",
+            " S&P500_analysis.ipynb | 2752 \u001b[32m+++++++++++++++++++++++++++++++++++++++++++++++++\u001b[m\n",
+            " 1 file changed, 2752 insertions(+)\n",
+            " create mode 100644 S&P500_analysis.ipynb\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/DataTalksClub/stock-markets-analytics-zoomcamp/refs/heads/main/cohorts/2025/ha1_Amazon.csv"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GixDdO2PR0MP",
+        "outputId": "fb46560f-bda8-4c0e-e76e-27fe19c011c7"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-06-03 05:34:55--  https://raw.githubusercontent.com/DataTalksClub/stock-markets-analytics-zoomcamp/refs/heads/main/cohorts/2025/ha1_Amazon.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 7844 (7.7K) [text/plain]\n",
+            "Saving to: ‘ha1_Amazon.csv’\n",
+            "\n",
+            "ha1_Amazon.csv      100%[===================>]   7.66K  --.-KB/s    in 0.003s  \n",
+            "\n",
+            "2025-06-03 05:34:55 (2.70 MB/s) - ‘ha1_Amazon.csv’ saved [7844/7844]\n",
+            "\n"
           ]
         }
       ]
@@ -320,23 +443,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tHrFoYR91CRe",
-        "outputId": "309d3acd-ff52-472b-fa10-05760a892510"
+        "outputId": "450aa465-6c1c-4c75-ef57-710b7092471c"
       },
-      "execution_count": 36,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enumerating objects: 5, done.\n",
-            "Counting objects:  20% (1/5)\rCounting objects:  40% (2/5)\rCounting objects:  60% (3/5)\rCounting objects:  80% (4/5)\rCounting objects: 100% (5/5)\rCounting objects: 100% (5/5), done.\n",
-            "Delta compression using up to 2 threads\n",
-            "Compressing objects:  33% (1/3)\rCompressing objects:  66% (2/3)\rCompressing objects: 100% (3/3)\rCompressing objects: 100% (3/3), done.\n",
-            "Writing objects:  33% (1/3)\rWriting objects:  66% (2/3)\rWriting objects: 100% (3/3)\rWriting objects: 100% (3/3), 504 bytes | 31.00 KiB/s, done.\n",
-            "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
-            "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
-            "To https://github.com/Dcwind/stock-market-analysis.git\n",
-            "   f1b41e2..f983777  main -> main\n"
+            "Everything up-to-date\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !git reset --hard HEAD~1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rowkUdZdCULN",
+        "outputId": "4f7bbc91-f543-4620-8d02-1c49a60c5578"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HEAD is now at f983777 Add initial S&P500 analysis notebook\n"
           ]
         }
       ]
@@ -368,13 +506,28 @@
     {
       "cell_type": "code",
       "source": [
-        "%rm 'S&P500_analysis.ipynb'"
+        "!wget"
       ],
       "metadata": {
-        "id": "XTno6c-b9ryy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XTno6c-b9ryy",
+        "outputId": "81bda0ba-3b03-4875-85e0-cee8c04888f9"
       },
-      "execution_count": 32,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "wget: missing URL\n",
+            "Usage: wget [OPTION]... [URL]...\n",
+            "\n",
+            "Try `wget --help' for more options.\n"
+          ]
+        }
+      ]
     }
   ]
 }
